// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hide the form and button elements on submit 1`] = `
<form
  action=""
  className="react_component_gf"
  id="guidance_feedback"
>
  <h2>
    Feedback
  </h2>
  <h3
    id="aria"
  >
    Did you find the guidance you needed?
  </h3>
  <button
    aria-describedby="aria"
    className="btnGF--no show"
    name="btnGF--no"
    onClick={[Function]}
    type="button"
  >
    No
  </button>
  <button
    aria-describedby="aria"
    className="btnGF--yes show"
    name="btnGF--yes"
    onClick={[Function]}
    type="button"
  >
    Yes
  </button>
  <fieldset
    className="hide"
  >
    <div>
      <label
        htmlFor=""
      >
        
      </label>
      <textarea
        id=""
        name=""
      />
    </div>
    <input
      className="btnGF btnGF--send"
      onClick={[Function]}
      type="submit"
      value="Send"
    />
    <input
      className="btnGF btnGF--cancel"
      onClick={[Function]}
      type="reset"
      value="Cancel"
    />
  </fieldset>
</form>
`;

exports[`Hide the form and button elements on submit 2`] = `
<form
  action=""
  className="react_component_gf"
  id="guidance_feedback"
>
  <h2>
    Feedback
  </h2>
  <h3
    id="aria"
  >
    Thank you for your feedback.
  </h3>
  <button
    aria-describedby="aria"
    className="btnGF--no hide"
    name="btnGF--no"
    onClick={[Function]}
    type="button"
  >
    No
  </button>
  <button
    aria-describedby="aria"
    className="btnGF--yes hide"
    name="btnGF--yes"
    onClick={[Function]}
    type="button"
  >
    Yes
  </button>
  <fieldset
    className="hide"
  >
    <div>
      <label
        htmlFor=""
      >
        
      </label>
      <textarea
        id=""
        name=""
      />
    </div>
    <input
      className="btnGF btnGF--send"
      onClick={[Function]}
      type="submit"
      value="Send"
    />
    <input
      className="btnGF btnGF--cancel"
      onClick={[Function]}
      type="reset"
      value="Cancel"
    />
  </fieldset>
</form>
`;

exports[`Show the relevant form elements when click on button NO or YES 1`] = `
<form
  action=""
  className="react_component_gf"
  id="guidance_feedback"
>
  <h2>
    Feedback
  </h2>
  <h3
    id="aria"
  >
    Did you find the guidance you needed?
  </h3>
  <button
    aria-describedby="aria"
    className="btnGF--no show"
    name="btnGF--no"
    onClick={[Function]}
    type="button"
  >
    No
  </button>
  <button
    aria-describedby="aria"
    className="btnGF--yes show"
    name="btnGF--yes"
    onClick={[Function]}
    type="button"
  >
    Yes
  </button>
  <fieldset
    className="hide"
  >
    <div>
      <label
        htmlFor=""
      >
        
      </label>
      <textarea
        id=""
        name=""
      />
    </div>
    <input
      className="btnGF btnGF--send"
      onClick={[Function]}
      type="submit"
      value="Send"
    />
    <input
      className="btnGF btnGF--cancel"
      onClick={[Function]}
      type="reset"
      value="Cancel"
    />
  </fieldset>
</form>
`;

exports[`Show the relevant form elements when click on button NO or YES 2`] = `
<form
  action=""
  className="react_component_gf"
  id="guidance_feedback"
>
  <h2>
    Feedback
  </h2>
  <h3
    id="aria"
  >
    Did you find the guidance you needed?
  </h3>
  <button
    aria-describedby="aria"
    className="btnGF--no hide"
    name="btnGF--no"
    onClick={[Function]}
    type="button"
  >
    No
  </button>
  <button
    aria-describedby="aria"
    className="btnGF--yes hide"
    name="btnGF--yes"
    onClick={[Function]}
    type="button"
  >
    Yes
  </button>
  <fieldset
    className="show"
  >
    <div>
      <label
        htmlFor="field-no"
      >
        What did you expect to find?
      </label>
      <textarea
        id="field-no"
        name="field-no"
      />
    </div>
    <input
      className="btnGF btnGF--send"
      onClick={[Function]}
      type="submit"
      value="Send"
    />
    <input
      className="btnGF btnGF--cancel"
      onClick={[Function]}
      type="reset"
      value="Cancel"
    />
  </fieldset>
</form>
`;

exports[`Show the relevant form elements when click on button NO or YES 3`] = `
<form
  action=""
  className="react_component_gf"
  id="guidance_feedback"
>
  <h2>
    Feedback
  </h2>
  <h3
    id="aria"
  >
    Did you find the guidance you needed?
  </h3>
  <button
    aria-describedby="aria"
    className="btnGF--no show"
    name="btnGF--no"
    onClick={[Function]}
    type="button"
  >
    No
  </button>
  <button
    aria-describedby="aria"
    className="btnGF--yes show"
    name="btnGF--yes"
    onClick={[Function]}
    type="button"
  >
    Yes
  </button>
  <fieldset
    className="hide"
  >
    <div>
      <label
        htmlFor="field-yes"
      >
        Any comments on your experience?
      </label>
      <textarea
        id="field-yes"
        name="field-yes"
      />
    </div>
    <input
      className="btnGF btnGF--send"
      onClick={[Function]}
      type="submit"
      value="Send"
    />
    <input
      className="btnGF btnGF--cancel"
      onClick={[Function]}
      type="reset"
      value="Cancel"
    />
  </fieldset>
</form>
`;
